--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,24 +1,3 @@
-/ .sub_header
-/   All events
-/ - @events.each do |e|
-/   .event_header
-/     = link_to e.name, event_path(e)
-/   .event_el
-/     .wrapper_1
-/       .some_block
-/         .event_date
-/           = e.date
-/           = e.time.strftime("%H:%M")
-/         .event_desc
-/           = e.description
-/       .wrapper_2
-/         .event_adr
-/           location is here
-/         .event_tags
-/           - e.tags.each do |t|
-/             = t.name
-/     .event_img
-/       = image_tag(e.photo.url(:thumb))
 .sub_header
   All events
 - @events.each do |e|
@@ -27,7 +6,7 @@
   .event_el
     .wrapper_1
       .auth_img
-        Photo here 120x120
+        = image_tag(e.owners.first.avatar.url(:thumb))
       .wrapper_2
         .event_desc
           = e.description
