--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -21,7 +21,7 @@ html, body {
 }
 .account_links {
   position: relative;
-  min-width: 250px;
+  min-width: 290px;
   width: 25%;
   padding: 0 1% 0 1%;
   float: right;
@@ -164,7 +164,6 @@ html, body {
   width: 100%;
   height: 40px;
   bottom: 0px;
-  margin-bottom: -50px;
   background-color: #E0FFFF;
 }
 /*EVENT PREVIEW ELEMENT*/
@@ -350,9 +349,30 @@ html, body {
 }
 /*FORMS*/
 .hello_form {
-  width: 350px;
+  width: 630px;
   margin: 0 auto;
   padding-top: 60px;
+}
+.line {
+  min-height: 34px;
+}
+.sign_with {
+  padding-left: 20px;
+}
+.margin_label {
+  margin-top: 8px;
+}
+.margin_area {
+  margin-bottom: 20px;
+}
+.margin_file {
+  margin-left: 50px;
+}
+.margin_remember {
+  margin-left: 20px;
+}
+#user_remember_me {
+  margin-top: 2px;
 }
 /*MEDIA WIDTH > 1920px*/
 @media (min-width: 1920px){
@@ -442,5 +462,14 @@ html, body {
   }
   .event_header {
     width: 100%;
+  }
+}
+/*MEDIA WIDTH <766px*/
+@media (max-width: 766px){
+  .hello_form {
+    padding-top: 20px;
+  }
+  .margin_file {
+    margin-left: 0px;
   }
 }
