--- a/app/views/events/new.html.haml
+++ b/app/views/events/new.html.haml
@@ -1,93 +1,83 @@
-.sub_header
-  New event
-= form_for @event do |e|
-  .form-group
-    = e.label :name, class: "col-sm-1 control-label"
-    .col-sm-5
-      = e.text_field :name, autofocus: true, class: 'form-control'
-  %br
-  %br
-  .form-group
-    = e.label :date, class: "col-sm-1 control-label"
-    .col-sm-5
-      = e.date_select :date, class: 'form-control'
-  %br
-  .form-group
-    = e.label :time, class: "col-sm-1 control-label"
-    .col-sm-5
-      = e.time_select :time, class: 'form-control'
-    %br
-  .form-group
-    = e.label :description, class: "col-sm-1 control-label"
-    .col-sm-5
-      = e.text_field :description, class: 'form-control'
-    %br
-  .form-group
-    = e.label :gender, class: 'col-sm-1 control-label'
-    .col-sm-5
-      = radio_button("event", "gender", "Male")
-      = label_tag :gender, "Male"
-      = radio_button("event", "gender", "Female")
-      = label_tag :gender, "Female"
-      = radio_button("event", "gender", "NA")
-      = label_tag :gender, "Not sure"
-    %br
-  .form-group
-    = e.label :number, class: 'col-sm-1 control-label'
-    .col-sm-5
-      = e.number_field :number, class: 'form-control'
-    %br
-  .form-group
-    = e.label :age, class: 'col-sm-1 control-label'
-    .col-sm-2
-      = e.number_field :agemin, class: 'form-control'
-    .col-sm-2
-      = e.number_field :agemax, class: 'form-control'
-    %br
-    %br
-  .form-group
-    = e.label :place, class: 'col-sm-1 control-label'
-    / Set height and width with CSS
-    .col-sm-1
-      = e.hidden_field :latitude, class: 'form-control'
-    .col-sm-1
-      = e.hidden_field :longitude, class: 'form-control'
-    %br
-    #googleMap{:style => "height:300px;width:450px;"}
-    / Add Google Maps
+.hello_form
+  .sub_header
+    New event
+  = form_for @event do |e|
+    .form-group.line
+      = e.label :name, class: "col-sm-2 control-label margin_label"
+      .col-sm-10
+        = e.text_field :name, autofocus: true, class: 'form-control'
+    .form-group.line
+      = e.label :date, class: "col-sm-2 control-label margin_label"
+      .col-sm-10
+        = e.date_select :date, class: 'form-control'
+    .form-group.line
+      = e.label :time, class: "col-sm-2 control-label margin_label"
+      .col-sm-10
+        = e.time_select :time, class: 'form-control'
+    .form-group.line
+      = e.label :gender, class: 'col-sm-2 control-label margin_label'
+      .col-sm-10
+        = radio_button("event", "gender", "Male")
+        = label_tag :gender, "Male"
+        = radio_button("event", "gender", "Female")
+        = label_tag :gender, "Female"
+        = radio_button("event", "gender", "NA")
+        = label_tag :gender, "Not sure"
+    .form-group.line
+      = e.label :age, class: 'col-sm-2 control-label margin_label'
+      .col-sm-2
+        = e.number_field :agemin, class: 'form-control'
+      .col-sm-2
+        = e.number_field :agemax, class: 'form-control'
+    .form-group.line
+      = e.label :number, class: 'col-sm-2 control-label margin_label'
+      .col-sm-10
+        = e.number_field :number, class: 'form-control margin_area'
+    .form-group.line
+      = e.label :description, class: "col-sm-2 control-label margin_label"
+      .col-sm-10
+        = e.text_area :description, class: 'form-control margin_area'
+    .form-group.line
+      = e.label :photo, class: "col-sm-1"
+      .col-sm-10.margin_file
+        = e.file_field :photo, class: 'margin_area'
+    .form-group.line
+      = e.label :place, class: 'col-sm-2 control-label margin_label'
+      / Set height and width with CSS
+      .col-sm-1
+        = e.hidden_field :latitude, class: 'form-control'
+      .col-sm-1
+        = e.hidden_field :longitude, class: 'form-control'
+      .sign_with#googleMap{:style => "height:300px;width:450px;"}
+      / Add Google Maps
 
-    :javascript
-      var map;
-      function initMap() {
-        var myCenter = {lat: 53.900892, lng: 27.558735};
-        document.getElementById("event_latitude").value = 53.900892;
-        document.getElementById("event_longitude").value = 27.558735;
-        map = new google.maps.Map(document.getElementById('googleMap'), {
-          center: myCenter,
-          zoom: 10
-        });
+      :javascript
+        var map;
+        function initMap() {
+          var myCenter = {lat: 53.900892, lng: 27.558735};
+          document.getElementById("event_latitude").value = 53.900892;
+          document.getElementById("event_longitude").value = 27.558735;
+          map = new google.maps.Map(document.getElementById('googleMap'), {
+            center: myCenter,
+            zoom: 10
+          });
 
-        var marker = new google.maps.Marker({
-          position: myCenter,
-          map: map,
-          draggable: true,
-          animation: google.maps.Animation.DROP,
-          title: 'Hello World!'
-        });
+          var marker = new google.maps.Marker({
+            position: myCenter,
+            map: map,
+            draggable: true,
+            animation: google.maps.Animation.DROP,
+            title: 'Hello World!'
+          });
 
-        google.maps.event.addListener(marker, "dragend", function(a) {
-          lat = a.latLng.lat();
-          lng = a.latLng.lng();
-          document.getElementById("event_latitude").value = lat;
-          document.getElementById("event_longitude").value = lng;
+          google.maps.event.addListener(marker, "dragend", function(a) {
+            lat = a.latLng.lat();
+            lng = a.latLng.lng();
+            document.getElementById("event_latitude").value = lat;
+            document.getElementById("event_longitude").value = lng;
 
-        });
-      }
-    %script{:src => "https://maps.googleapis.com/maps/api/js?key=AIzaSyCg3tpHZzNzF1JWKOruUBy3PrOksKDRvII&callback=initMap"} 
-    
-  .form-group
-    = e.label :photo, class: "col-sm-1"
-    .col-sm-5
-      = e.file_field :photo
-    %br
-  = e.submit "Save", class: "btn btn-confirm"
+          });
+        }
+      %script{:src => "https://maps.googleapis.com/maps/api/js?key=AIzaSyCg3tpHZzNzF1JWKOruUBy3PrOksKDRvII&callback=initMap"}
+    .pagin_box
+      = e.submit "Save", class: "btn btn-confirm"
