--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -1,3 +1,35 @@
+.hello_form
+  .sub_header
+    Serach events
+  = search_form_for @q do |f|
+    .form-group.line
+      = f.label :name_cont, 'Name: ', class: 'col-sm-2 control-label margin_label'
+      .col-sm-10
+        = f.search_field :name_cont, class: 'form-control'
+    / .form-group.line
+    /   = f.label :date_eq, 'Date: ', class: 'col-sm-2 control-label margin_label'
+    /   .col-sm-10
+    /     = f.date_select(:date_eq, start_year: 2010, end_year: Time.now.year)
+    .form-group.line
+      = f.label :gender_eq, 'Gender: ', class: 'col-sm-2 control-label margin_label'
+      .col-sm-10
+        = f.radio_button :gender_eq, 'male'
+        = label_tag :gender_eq, 'Male'
+        = f.radio_button :gender_eq, 'female'
+        = label_tag :gender_eq, 'Female'
+        = f.radio_button :gender_eq, 'NA'
+        = label_tag :gender_eq, 'nvm'
+    .form-group.line
+      = f.label :age, 'Age: ', class: 'col-sm-2 control-label margin_label'
+      .col-sm-2
+        = f.number_field :agemax_gteq, class: 'form-control'
+      .col-sm-2
+        = f.number_field :agemin_lteq, class: 'form-control'
+    .form-group.line
+      = f.label :location_cont, 'Location: ', class: 'col-sm-2 control-label margin_label'
+      .col-sm-10
+        = f.search_field :location_cont, class: 'form-control'
+    = f.submit
 .sub_header
   All events
 - @events.each do |e|
