--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -37,23 +37,29 @@
     .form-group.line
       = f.label :tags_name_in, 'Tags: ', class: 'col-sm-2 control-label margin_label'
       .col-sm-10
-        = f.select :tags_name_in, options_from_collection_for_select(Tag.all, :name, :name), {}, { class: 'js-example-tokenizer', multiple: true }
+        = f.select :tags_name_in, options_from_collection_for_select(Tag.all, :name, :name), {}, { class: 'js-example-tokenizer form-control margin_area', multiple: true }
     = f.submit class: "btn btn-confirm"
 
   /   = submit_tag "Search", :name => nil, :surname => nil, :gender => nil, :country => nil, :city => nil
-  .sub_header
-    All users
-  %table.event_list{:align => "left"}
-    %tr{:align => "center"}
-      %th Name:
-      %th Surname:
-      %th Email:
-    - @users.each do |u|
-      %tr{:align => "center"}
-        %td= link_to u.name, user_path(u)
-        %td= u.surname
-        %td= u.email
-  %br
-    = paginate @users
-    %br
-    = t('congradulation')
+.sub_header
+  All users
+- @users.each do |u|
+  .event_header
+    = link_to u.name, user_path(u)
+  .event_el
+    .wrapper_1
+      .auth_img
+        = image_tag(u.avatar.url(:thumb))
+      .wrapper_2
+        .event_desc
+          = u.about
+        .wrapper_3
+          .event_date
+            = u.age
+          .event_adr
+            = u.country_
+          .event_tags
+            = tags_list(u.tags)
+    .event_img
+.pagin_box
+  = paginate @users
