--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,64 +1,70 @@
 !!!
 %html
-	%head
-		%title Mngr
-		= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-		= javascript_include_tag 'application', 'data-turbolinks-track' => true
-		%script{:src => "//code.jquery.com/ui/1.11.4/jquery-ui.js"}
-		%script{:src => 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js'}
-		= csrf_meta_tags
-	%body
-		.content_wrapper
-			.main_header
-				.logo
-				.account_links
-					- if user_signed_in?
-						Logged in as
-						= succeed "." do
-							%strong= current_user.email
-						%br
-						= link_to "Main", root_path, :class => 'navbar-link'
-						|
-						= link_to "Events", events_path, :class => 'navbar-link'
-						|
-						= link_to "Edit profile", edit_user_path(current_user), :class => 'navbar-link'
-						|
-						= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'
-						%br
-					- else
-						= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'
-						|
-						= link_to "Login", new_user_session_path, :class => 'navbar-link'
-						|
-						= link_to image_tag('icon-tw16.png'), user_omniauth_authorize_path(:twitter) 
-						|
-						= link_to image_tag('icon-fb16.png'), user_omniauth_authorize_path(:facebook) 
-						|
-						= link_to image_tag('icon-vk16.png'), user_omniauth_authorize_path(:vkontakte)
-			- if notice
-				%p.alert.alert-success= notice
-			- if alert
-				%p.alert.alert-danger= alert
-			.control_panel
-				= active_link_to "Main", root_path, :active => :exclusive
-				- if user_signed_in?
-					= active_link_to "Profile", user_path(current_user), :active => :exclusive
-					= active_link_to "Events", events_path, :active => :exclusive
-				= active_link_to "Peoples", root_path, :active => :exclusive
-				= active_link_to "Media", root_path, :active => :exclusive
-				= active_link_to "Help", root_path, :active => :exclusive
-			.left_side
-				.banner.box2
-					%p BANNER №1
-				.banner.box3
-					%p BANNER №2
-			.right_side
-				.banner.box1
-					%p EVENT'S VINDGET
-				.banner.box3
-					%p BANNER №3
-			.content
-				= yield
-			.divider_f
-		.footer
-			%p footer
+  %head
+    %title Mngr
+    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
+    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    %script{:src => "//code.jquery.com/ui/1.11.4/jquery-ui.js"}
+    %script{:src => 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js'}
+    %script{:src => "//maps.google.com/maps/api/js?key=AIzaSyCg3tpHZzNzF1JWKOruUBy3PrOksKDRvII&callback=initMap"}
+    %script{:src => "//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"}
+    %script{:src => "//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js", :type => "text/javascript"}
+    %script{:src => "//cdn.rawgit.com/googlemaps/js-rich-marker/gh-pages/src/richmarker-compiled.js", :type => "text/javascript"}
+    %script{:src => "//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js", :type => "text/javascript"}
+
+    = csrf_meta_tags
+  %body
+    .content_wrapper
+      .main_header
+        .logo
+        .account_links
+          - if user_signed_in?
+            Logged in as
+            = succeed "." do
+              %strong= current_user.email
+            %br
+            = link_to "Main", root_path, :class => 'navbar-link'
+            |
+            = link_to "Events", events_path, :class => 'navbar-link'
+            |
+            = link_to "Edit profile", edit_user_path(current_user), :class => 'navbar-link'
+            |
+            = link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'
+            %br
+          - else
+            = link_to "Sign up", new_user_registration_path, :class => 'navbar-link'
+            |
+            = link_to "Login", new_user_session_path, :class => 'navbar-link'
+            |
+            = link_to image_tag('icon-tw16.png'), user_omniauth_authorize_path(:twitter) 
+            |
+            = link_to image_tag('icon-fb16.png'), user_omniauth_authorize_path(:facebook) 
+            |
+            = link_to image_tag('icon-vk16.png'), user_omniauth_authorize_path(:vkontakte)
+      - if notice
+        %p.alert.alert-success= notice
+      - if alert
+        %p.alert.alert-danger= alert
+      .control_panel
+        = active_link_to "Main", root_path, :active => :exclusive
+        - if user_signed_in?
+          = active_link_to "Profile", user_path(current_user), :active => :exclusive
+          = active_link_to "Events", events_path, :active => :exclusive
+        = active_link_to "Peoples", root_path, :active => :exclusive
+        = active_link_to "Media", root_path, :active => :exclusive
+        = active_link_to "Help", root_path, :active => :exclusive
+      .left_side
+        .banner.box2
+          %p BANNER №1
+        .banner.box3
+          %p BANNER №2
+      .right_side
+        .banner.box1
+          %p EVENT'S VINDGET
+        .banner.box3
+          %p BANNER №3
+      .content
+        = yield
+      .divider_f
+    .footer
+      %p footer
