047 add tabs to users show page - added tabs (Future/Past events) for users page - pagination for each tab - added script to save current tab after reload page - fixed helpers (edit/del/follow)

--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -32,9 +32,9 @@
     Tags:
   .col-2
     = tags_list(@event.tags)
-= follow_button
-= edit_button
-= delete_button
+= follow_event_button
+= edit_event_button
+= delete_event_button
 .hello_form
   = render partial: 'events_map'
   = commontator_thread(@event)
