--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,7 +1,7 @@
 .user_avatar
   = image_tag(@user.avatar.url(:medium))
   .user_edit
-    = edit_button
+    = edit_user_button
 .user_info
   .col-1
     Name:
@@ -54,25 +54,17 @@
 .divider
 .sub_header
   All events
-- @events.each do |e|
-  .event_header
-    = link_to e.name, event_path(e)
-  .event_el
-    .wrapper_1
-      .auth_img
-        = image_tag(e.owners.first.avatar.url(:thumb))
-      .wrapper_2
-        .event_desc
-          = e.description
-        .wrapper_3
-          .event_date
-            = e.date
-            = e.time.strftime("%H:%M")
-          .event_adr
-            = e.location
-          .event_tags
-            = tags_list(e.tags)
-    .event_img
-      = image_tag(e.photo.url(:thumb))
-.pagin_box
-  = paginate @events
+%ul.nav.nav-pills.nav-justified#tabs_nav_bar
+  %li.active
+    %a{"data-toggle" => "tab", href: "#future"} Future events
+  %li
+    %a{"data-toggle" => "tab", href: "#past"} Past events
+.tab-content
+  #future.tab-pane.fade.in.active
+    = render partial: 'events_tab', locals: {events: @events_f}
+    .pagin_box
+      = paginate @events_f, param_name: :events_f
+  #past.tab-pane.fade
+    = render partial: 'events_tab', locals: {events: @events_p}
+    .pagin_box
+      = paginate @events_p, param_name: :events_p
