049 fixed user index view bug - new user w/o country rised error

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -55,7 +55,7 @@
           .event_date
             = u.age
           .event_adr
-            = u.country_
+            = country_name(u)
           .event_tags
             = tags_list(u.tags)
     .event_img
